[tool.poetry]
name = "poohead"
version = "0.1.0"
description = ""
authors = ["Sheng Wu <shengwu34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = {version = "*", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
